# zhangweiwei

./: .gitignore  10_搜索方法.md  CutSubtitle.py  CutSubtitle_paddleocr.py  FaceRec.py  FaceRec_insightface.py  README.md  face_features_insightface.npz  generate_features.py  generate_features_insightface.py  main.py  params.py  requirements.txt  vercel.json
DataProcess/: README.md  compress_subtitle.py  create_db.py  import_subtitles.py  main.py  merge_screenshot.py  search_subtitles.py
Web/: app.js  db_search.js  index.html  links.json  mapping.json  script.js  style.css  styles.css
api/: index.py  requirements.txt  subtitle_search_api
api/search/: Cargo.toml
api/search/src/: main.rs
search/: mapping.py  search.py
subtitle/: P0011 弹指一挥间：中国全方位崛起.json  P0022 一出国就爱国.json  P0033 防止盲人摸象.json  P0044 中国不寻常的崛起.json  P0055 把中国的事说清楚.json  P0066 文明型国家（一）.json  P0077 文明型国家（二）.json  P0088 谈谈中国模式（一）.json  P0099 谈谈中国模式（二）.json  P01010 民主模式的国际比较.json  P01111 好民主才是人民之福.json  P01212 谈谈人权.json  P01313 “普世价值”面临的困境.json  P01414 震撼世界的中国工业革命.json  P01515 “一带一路”：机遇和未来.json  P01616 解构“西方中心论”（一）.json  P01717 解构“西方中心论”（二）.json  P01818 从领先到落伍到赶超.json  P01919 中国是如何实现和平崛起的.json  P02020 小议中美贸易战.json  P02121 中国人的爱国主义.json  P02222 “历史终结论”的终结.json  P02323 从英国“脱欧”看西方制度困境.json  P02424 国际视野下的中国共产党.json  P02525 比较中国梦和美国梦.json  P02626 中国是如何突破依附体系的.json  P02727 中国突破依附体系的意义.json  P02828 苏联是如何解体的.json  P02929 给西方民主把把脉.json  P03030 为什么“阿拉伯之春”变成“阿拉伯之冬”.json  P03131 市场原教旨主义行不通.json  P03232 中国是国家资本主义吗.json  P03333 可能影响世界的中国理念（一）.json  P03434 可能影响世界的中国理念（二）.json  P03535 香港局势：自助者天助之.json  P03636 开天辟地新中国.json  (+495 more)
