[package]
name = "subtitle_search_api"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
rayon = "1.8"
hyper = { version = "0.14", features = ["full", "http1", "server"] }
tokio-stream = { version = "0.1", features = ["net"] }
http = "=0.2.12"
tower-service = "0.3"
futures = "0.3"
actix-web = "4.4"
env_logger = "0.10"
aho-corasick = "1.1.2"
